2010-08-15 Pierre Wieser <pwieser@trychlos.org>

	Move schemas into a new subdirectory data/gconf-schemas.

	* configure.ac:
	* data/Makefile.am: Updated accordingly.

	Move exports/ subdirectory into data/ tree.

	* configure.ac:
	* data/Makefile.am: Updated accordingly.

	* data/exports/Makefile.am:
	* data/exports/README: New files.

	* doc/nact/Makefile.am:	Fix PDF installation.

	* src/core/na-object-profile.c (convert_pre_v3_parameters_str):
	%f used to be the name of the file (a basename), converts it to %b.

2010-08-13 Pierre Wieser <pwieser@trychlos.org>

	* doc/api/nautilus-actions-sections.txt:
	* doc/api/nautilus-actions-docs.xml: New files.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_set_locale_string):
	Write all available locales to have a chance another locale can get it.

	* Makefile.am:
	Build doc after src so that libraries are available when documenting them.

	* autogen.sh:
	* configure.ac: Implement gtk-doc and manuals generation.

	* doc/api/Makefile.am: Build gtk-doc for public API.

	* doc/nact/C/nact-conditions.xml:
	* doc/nact/C/nact-execution.xml:
	* doc/nact/C/nact-menus.xml:
	* doc/nact/C/nact-profiles.xml:
	* doc/nact/C/nact-sorting.xml:
	* doc/nact/C/nact-starting.xml:
	* doc/nact/C/nact-where.xml:
	* doc/nact/C/nautilus-actions-config-tool.xml:
	Update NACT user's manual.

	* doc/nact/Makefile.am: Implement manuals generation.

	* src/api/na-core-utils.h:
	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/api/na-gconf-utils.h:
	* src/api/na-icontext.h:
	* src/api/na-iduplicable.h:
	* src/api/na-iimporter.h:
	* src/api/na-object-api.h:
	* src/api/na-object-id.h:
	* src/api/na-object-item.h:
	* src/core/na-core-utils.c:
	* src/core/na-data-boxed.c:
	* src/core/na-export-format.c:
	* src/core/na-export-format.h:
	* src/core/na-exporter.c:
	* src/core/na-exporter.h:
	* src/core/na-factory-object.c:
	* src/core/na-factory-object.h:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c: